@@ -1,8 +1,12 @@
 package org.fiware.tmforum.customerbillmanagement;
 
+import org.fiware.customerbillmanagement.model.CustomerBillUpdateVO;
+import org.fiware.customerbillmanagement.model.CustomerBillVO;
 import org.fiware.tmforum.common.mapping.IdHelper;
+import org.fiware.tmforum.customerbillmanagement.domain.CustomerBill;
 import org.fiware.tmforum.mapping.MappingException;
 import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
 
 import java.net.MalformedURLException;
 import java.net.URI;
@@ -14,50 +18,46 @@ import java.net.URL;
 @Mapper(componentModel = "jsr330", uses = IdHelper.class)
 public interface TMForumMapper {
 
-    // customer management
+	// customer bill
 
-//    @Mapping(target = "id", source = "id")
-//    @Mapping(target = "href", source = "id")
-//    CustomerVO map(CustomerCreateVO customerCreateVO, URI id);
-//
-//    CustomerVO map(Customer customer);
-//
-//    Customer map(CustomerVO serviceCatalogVO);
-//
-//    @Mapping(target = "id", source = "id")
-//    Customer map(CustomerUpdateVO customerUpdateVO, String id);
+	CustomerBillVO map(CustomerBill customer);
 
-    default URL map(String value) {
-        if (value == null) {
-            return null;
-        }
-        try {
-            return new URL(value);
-        } catch (MalformedURLException e) {
-            throw new MappingException(String.format("%s is not a URL.", value), e);
-        }
-    }
+	CustomerBill map(CustomerBillVO serviceCatalogVO);
 
-    default String map(URL value) {
-        if (value == null) {
-            return null;
-        }
-        return value.toString();
-    }
+	@Mapping(target = "id", source = "id")
+	CustomerBill map(CustomerBillUpdateVO customerUpdateVO, String id);
 
-    default URI mapToURI(String value) {
-        if (value == null) {
-            return null;
-        }
-        return URI.create(value);
-    }
+	default URL map(String value) {
+		if (value == null) {
+			return null;
+		}
+		try {
+			return new URL(value);
+		} catch (MalformedURLException e) {
+			throw new MappingException(String.format("%s is not a URL.", value), e);
+		}
+	}
 
-    default String mapFromURI(URI value) {
-        if (value == null) {
-            return null;
-        }
-        return value.toString();
-    }
+	default String map(URL value) {
+		if (value == null) {
+			return null;
+		}
+		return value.toString();
+	}
+
+	default URI mapToURI(String value) {
+		if (value == null) {
+			return null;
+		}
+		return URI.create(value);
+	}
+
+	default String mapFromURI(URI value) {
+		if (value == null) {
+			return null;
+		}
+		return value.toString();
+	}
 }
 
 
